# recsys-challenge

./: .gitignore  README.md  pyproject.toml
notebooks/: build_examples.ipynb  build_neighbors.ipynb  build_vocabs.ipynb  dataset_ebnerd.ipynb  exploration.ipynb  preprocess.ipynb
src/recsys_challenge/: __init__.py  __main__.py
src/recsys_challenge/dataset/: __init__.py  _vocab.py
src/recsys_challenge/dataset/preprocess/: auto.py  examples.py  neighbors.py  vocab.py
src/recsys_challenge/evaluation/: _ba_test.py  beyond_accuracy.py  metrics_protocols.py
src/recsys_challenge/model/: __init__.py  _gerl.py  _modules.py  _title_encoder.py
src/recsys_challenge/models/fastformer/: dataloader.py
src/recsys_challenge/models/newsrec/: dataloader.py  lstur.py  naml.py  npa.py  nrms.py  nrms_docvec.py
src/recsys_challenge/training/: __main__.py
src/recsys_challenge/utils/: _articles.py  _articles_behaviors.py  _behaviors.py  _descriptive_analysis.py  _nlp.py  _polars.py
