[project]
name = "recsys-challenge"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Harold Ruiter", email = "harold@soaratorium.com" }]
dependencies = [
    "torch>=2.3.1",
    "polars>=0.20.31",
    "ruff>=0.4.10",
    "numpy>=2.0.0",
    "tqdm>=4.66.4",
    "pyyaml>=6.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"recsys-challenge" = "recsys_challenge:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/recsys_challenge"]
